2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	* Makefile.am:
	Fixed the external update target.
	Command find's -prune do not work with -delete.

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	reviewed by: Xavier Martinez

	* Makefile.am:
	* flumotion/extern/command/ChangeLog:
	* flumotion/extern/command/README:
	* flumotion/extern/command/__init__.py:
	* flumotion/extern/command/command.py:
	* flumotion/extern/command/test_command.py:
	* flumotion/extern (svn:externals):
	* flumotion/extern/command (added):
	* flumotion/extern/command/test_command.py (added):
	* flumotion/extern/command/command.py (added):
	* flumotion/extern/command/__init__.py (added):
	* flumotion/extern/command/ChangeLog (added):
	* flumotion/extern/command/README (added):
        Changed the SVN external for an export.

2010-03-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/misc/httpserver/httpfile.py:
	Avoid twisted's deprecation warnings for REAL and fix r8508

2010-03-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Accept version 'SVN-Trunk' in configure

2010-03-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>


	* flumotion/component/misc/httpserver/httpfile.py:
	Avoid twisted's deprecation warnings

2010-03-17  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Check twisted's version properly.

2010-03-09  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Xavier Martinez

	* flumotion/admin/command/component.py:
	Fix errback of the delete command. They were never called and the
	failure was not handled.
	Fixes #1404

2010-03-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/base/scheduler.py:
	* flumotion/component/base/watcher.py:
	* flumotion/test/test_component_base_watcher.py:
	Prevent the watcher to stop polling for changes when a
	subscriber raises an Exception.
	Closes #1385
